--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta name="robots" content="noindex">
-  <title>DreamBox: Welcome Back</title>
+  <title>dont sue me</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" media="all" href="application-ec6935daa5272c71eec1beffcb2be690f01c03dc6825b2d5561913c9d9ae708c.css" />
   <script src="application-59921aa693d4cfbe08a9d735dcefaec637f85584052ced09800bfe570de012c9.js"></script>
@@ -34,7 +34,7 @@
                         </div>
                         <noscript>
   <div>
-    <p class="error">DreamBox requires JavaScript in order to function properly.  Please enable JavaScript in your browser before logging in.</p>
+    <p class="error"> Eagle Learning requires JavaScript in order to function properly.  Please enable JavaScript in your browser before logging in.</p>
   </div>
 
   <style>
@@ -55,19 +55,11 @@
             </div>
             <div class="divLoginFooterWrapper">
                 <div id="divLoginFooter">
-                    Copyright &copy; 2022 DreamBox Learning, Inc. All Rights Reserved.
+                    Copyright &copy; 2022 Eagle Learning, Inc. All Rights Reserved.
 
-<a href="http://www.dreambox.com/legal" title="Legal" target="_blank">Legal</a> |
-<a href="http://www.dreambox.com/privacy" title="Privacy policy" target="_blank">Privacy policy</a>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-1401487-5'], ['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
+<a href="http://www.example.com/legal" title="Legal" target="_blank">Legal</a> |
+<a href="http://www.example.com/privacy" title="Privacy policy" target="_blank">Privacy policy</a>
+
                 </div>
             </div>
         </center>
