--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta name="robots" content="noindex">
-  <title>dont sue me</title>
+  <title>Eagle Learning: Welcome Back</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" media="all" href="application-ec6935daa5272c71eec1beffcb2be690f01c03dc6825b2d5561913c9d9ae708c.css" />
   <script src="application-59921aa693d4cfbe08a9d735dcefaec637f85584052ced09800bfe570de012c9.js"></script>
@@ -14,7 +14,7 @@
         <center>
             <div class="loginBackground" id="background">
                 <div align="right" class="loginTopRightLogOut">
-                  <a href="/play/logout" title="Log Out">Log Out</a>
+                  <a href="https://example.com" title="Log Out">Log Out</a>
                 </div>
                 <div class="loginContent" id="content">
                     <div>
@@ -22,11 +22,11 @@
                     </div>
                     <div id="parent_login">
                         <p class="loginHeadline">
-                            Welcome Back DreamBox Learning Family!
+                            Welcome Back Eagle Learning crew!
                             <br/>
                         </p>
                         <div class="loginParentSubtext" align="center">
-                            If you are not the DreamBox Learning family please <a href="/play/logout">Log Out.</a>
+                            If you are not the Eagle Learning crew please <a href="/play/logout">Log Out.</a>
                         </div>
                         <div class="loginClear">
                         </div>
