--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </style>
 </noscript>
                         <div id="loginSubmitButtons" class="require-script">
-                          <input type="image" src="blank-146402fe2d5c20a6f84b46966843eee4a7bbc0d01c3e15f1440af3c0a551bc4c1.png" id="returning_action_dashboard" class="loginButton" name="dashboard" data-location="https://play.dreambox.com/dashboard" alt="Submit Form" title="Submit Form" />
+                          <input type="image" src="blank-146402fe2d5c20a6f84b46966843eee4a7bbc0d01c3e15f1440af3c0a551bc4c1.png" id="returning_action_dashboard" class="loginButton" name="dashboard" data-location="https://www.pexels.com/search/eagle/" alt="Submit Form" title="Submit Form" />
                           <input type="image" src="blank-146402fe2d5c20a6f84b46966843eee4a7bbc0d01c3e15f1440af3c0a551bc4c.png" id="returning_action_play" class="loginButton" name="play" data-location="https://clever.com/oauth/authorize?redirect_uri=https%3A%2F%2Fplay.dreambox.com%2Flogin%2Fclever_oauth&client_id=59b1bbef45a1ef9f3bfb&district_id=5140a992aeb7b58a5a000002&response_type=code&skip=1&channel=instant_login_link&confirmed=true&specify_auth=saml" alt="Submit Form" title="Submit Form" />
                         </div>
                     <div class="loginClear">
